--- a/이펙티브 자바/05. 제네릭/아이템 26. 로 타입은 사용하지 말라.md
+++ b/이펙티브 자바/05. 제네릭/아이템 26. 로 타입은 사용하지 말라.md
@@ -122,3 +122,7 @@ Class<List> listClass = List.class;
 // 제네릭 타입은 컴파일 에러 !
 // Class<List<Integer>> listGenericClass = List<Integer>.class;
 ```
+
+**실습에 사용된 소스 코드**
+
+https://github.com/rimrim990/test-repository/blob/main/src/test/java/learn/java/testrepository/plain/generic/CollectionGenericTest.java
