[0925] 스프링 캐시 update

--- a/2023Q3/2023_09/0925.md
+++ b/2023Q3/2023_09/0925.md
@@ -145,6 +145,21 @@ private Cache.ValueWrapper findInCaches(CacheOperationContext context, Object ke
 - `findInCaches` 에서는 `key` 에 대응되는 캐시를 탐색한다
 - `ConcurrentMapCaches`의 `ArrayList`를 탐색하며 일치하는 캐시가 존재하는지 검사한다
 
+```java
+if (cacheHit != null && !hasCachePut(contexts)) {
+    // If there are no put requests, just use the cache hit
+    cacheValue = cacheHit.get();
+    returnValue = wrapCacheValue(method, cacheValue);
+}
+else {
+    // Invoke the method if we don't have a cache hit
+    returnValue = invokeOperation(invoker);
+    cacheValue = unwrapReturnValue(returnValue);
+}
+```
+- `key`에 대응되는 캐시가 존재하면 캐싱된 값을 가져온다
+- 캐싱된 값이 없으면 `invokeOperation`을 호출하여 실제 메서드를 호출한다
+
 **캐시 갱신하기**
 ```java
 returnValue = invokeOperation(invoker);
