--- a/2023Q3/2023_09/0927.md
+++ b/2023Q3/2023_09/0927.md
@@ -45,40 +45,10 @@ String privateMethod() {
 
 final Class<? extends LoggedService> clazz = service.getClass();
 final Method privateMethod = clazz.getDeclaredMethod("privateMethod");
-privateMethod.setAccessible(true);
-privateMethod.invoke(service);
-```
-- `private` 메서드를 `reflection` 으로 접근 가능한 상태로 수정 후 실행시켜보았다
-
-```
-[String learn.java.testrepository.spring.aop.LoggedService.privateMethod()] @Before
-[String learn.java.testrepository.spring.aop.LoggedService.privateMethod()] @AfterReturning
-[String learn.java.testrepository.spring.aop.LoggedService.privateMethod()] @After
-```
-- 이상하게도 AOP 가 동작하였다..
-
-```java
-private class Child extends LoggedService {
-}
-
-final Child child = new Child();
-final Class<? extends Child> clazz = child.getClass();
 assertThrows(NoSuchMethodException.class, () -> clazz.getDeclaredMethod("privateMethod"));
 ```
-- `reflection`을 사용해서 그런가 싶어 `LoggedService`를 상속받은 클래스를 직접 생성해보았다
-- 상속받은 클래스에서는 `reflection`으로 `privateMethod`에 접근 불가능했다
-- `getDeclaredMethod`는 상속 받은 메서드는 제외하고 클래스 내에 선언된 메소드만 가져오기 때문이다
-- 따라서 `CGLIB`으로 생성한 프록시가 부모 클래스의 `private`도 상속받았다는 의미이다...
-
-```java
-// 실행
-proxyClass.getDeclaredMethod("privateMethod")
-
-// 결과
-final java.lang.String learn.java.testrepository.spring.aop.LoggedService$$SpringCGLIB$$0.privateMethod()
-```
-- 디버깅 툴을 이용하여 CGLIB 으로 생성된 클래스에 리플렉션을 통해 메서드 정보를 가져와보았다
-- `final` 메서드를 제외한 모든 메서드 정보를 가져올 수 있었다 ..?
+- `private` 메서드를 `reflection` 으로 접근 가능한 상태로 수정 후 실행시켜보았다
+- `private` 메서드는 접근이 불가능하기 때문에 오버라이딩이 불가능하다. 따라서 `NoSuchMethodException` 이 발생하며 AOP 실행도 불가능하다
 
 **final**
 ```
@@ -94,8 +64,7 @@ public final String finalMethod() {
 ```java
 The dynamically generated subclasses override the non-final methods of the superclass
 ```
-- `final`이 아닌 모든 메서드를 전부 오버라이딩하는 것 같다
-- `private`메서드는 오버라이딩이 불가능해서 프록시 호출이 안된다고 생각했는데 혼란스럽다..
+- CGLIB 프록시는 `private` 과 `final`이 아닌 모든 메서드를 전부 오버라이딩하므로 AOP 실행이 가능하다
 
 ### AOP 자가호출
 스프링에서는 생성된 프록시에 어드바이스 코드를 적용하므로, 타깃 객체 내에서의 자가 호출에는 AOP 가 적용되지 않는다.
