[MySQL] InnoDB 트랜잭션 격리 수준과 일관된 읽기 update

--- a/MySQL InnoDB/InnoDB Locking and Transaction Model/15.7.2 InnoDB Transactional Model.md
+++ b/MySQL InnoDB/InnoDB Locking and Transaction Model/15.7.2 InnoDB Transactional Model.md
@@ -6,6 +6,15 @@
 1) 트랜잭션 격리수준
 2) 잠금없는 일관된 읽기
 
+**사전 지식**
+
+InnoDB 락 모드
+- `X,REC_NOT_GAP` -> 인덱스 레코드 / 배타 락
+- `X,GAP` -> 인덱스 레코드 갭 / 배타 락
+- `X` -> 인덱스 레코드 넥스트 키 / 배타 락
+- InnoDB 에서는 데이터 레코드가 아닌 **인덱스에만 락을 걺**
+  - 클러스터링 테이블을 사용하기 때문에 레코드 페이지에 접근하려면 항상 인덱스를 타고 가야 함
+
 ### 1) 트랜잭션 격리수준
 InnoDB 는 mvcc 와 락 없는 일관적 읽기를 통해 트랜잭션 격리 수준을 보장한다. 또한 모듣 트랜잭션 격리 수준을 지원한다
 - 기본 격리 수준은 `REPEATABLE READ` 이다
@@ -80,8 +89,9 @@ mysql> update test set val1= 3 where seq=3;
 
 | PRIMARY    |       281473231949632 | RECORD    | X,REC_NOT_GAP | GRANTED     | 3         |
 ```
-- 유니크 인덱스에 단일 데이터 조회 검색 조건에서는 결과에 해당하는 1건의 레코드만 잠그고 갭 락 사용하지 않는다
+- 유니크 인덱스에 단일 데이터 조회 검색 조건에서는 결과에 해당하는 1건의 레코드만 잠그고 갭 락 사용하지 않는다 (`X, REC_NOT_GAP`)
 - 그 외에는 탐색범위의 모든 레코드를 잠그고, 갭 락이나 넥스트 키 락을 사용하여 다른 트랜잭션에서 갭에 레코드를 삽입하지 못하도록 제한한다
+  - 갭을 잠그는 이유는 팬텀 로우 현상을 막기 위함
 
 ```mysql
 mysql> update tml set val2 = 20 where val1 = 6;
@@ -91,6 +101,8 @@ mysql> update tml set val2 = 20 where val1 = 6;
 | idx1       |       281473231950320 | RECORD    | X,GAP         | GRANTED     | 7, 16
 ```
 - 유니크하지 않은 값을 업데이트 시도한 결과 세컨더리 인덱스와 클러스터드 인덱스 레코드에 락이 걸렸다
+  - 세컨더리 인덱스에는 넥스트 키 락 (`X`) 과 갭 락이 걸림 (`X, GAP`)
+  - 클러스터드 인덱스에는 레코드락만 걸림 (`X, REC_NOT_GAP`)
 - 추가적으로 다음 레코드에 갭 락이 걸렸음을 확인할 수 있었다
   - `val1`의 값이 동일하게 6인 레코드를 삽입할 수 없음
 
@@ -111,19 +123,19 @@ mysql> update tml set val2 = 20 where val1 >= 3 and val1 <= 6;
 | PRIMARY    |       281473231949976 | RECORD    | X,REC_NOT_GAP | GRANTED     | 16
 ```
 - `val1`의 값이 3이상 6이하인 레코드를 갱신하자 다음과 같이 락이 걸렸다
-- `val1`의 인덱스와 클러스터드 인덱스 레코드에 락이 걸렸음을 확인할 수 있다
+- `val1`의 세컨더리 인덱스에는 넥스트 키 락이 걸리고 클러스터드 인덱스에는 레코드 락이 걸렸음을 확인할 수 있다
 
 ```mysql
 mysql> insert into tml(val1, val2) values (4, 23);
 
 | idx1       |       281473231955936 | RECORD    | X,GAP,INSERT_INTENTION | WAITING     | 5, 14     |
 ```
-- 갭 락이 걸리지 않았기 때문에 데이터를 삽입할 수 있을 것이라 판단하여 `val1`값을 4로 하여 `insert`를 시도해보았다
-- 그러나 `val1` 값이 5인 인덱스 레코드에 이미 배타 락이 걸려있어 데이터 삽입을 위해 대기해야 했다
-- 락 테이블을 자세히 살펴보니 `val1` 값이 7인 인덱스와 클러스터드 인덱스 레코드에도 락이 걸려있다. 따라서 `val1` 값이 6인 레코드도 삽입이 불가능 할 것이다
-- 별도의 갭 락을 걸지는 않았지만 범위 탐색 조건에 새로운 레코드 삽입은 불가능하다
+- `val1=4`인 새로운 레코드의 삽입을 시도하면 `idx1=5, 14`에 걸린 넥스트 키 락에 의해 대기하게 된다
+- 마찬가지로 `idx=7, 16` 에도 넥스트 키 락이 걸려있기 때문에 `val1=6`인 레코드의 삽입도 대기해야 한다
+  - 넥스트 키 락은 레코드의 왼쪽 갭 잠금
 
 **READ COMMITTED**
+
 동일한 트랜잭션 내에서라도 새로운 스냅샷을 읽어올 수 있다
 - 다른 트랜잭션에서 커밋된 데이터를 새롭게 읽어올 수 있다
 
@@ -131,46 +143,154 @@ mysql> insert into tml(val1, val2) values (4, 23);
 - 갭 락을 사용하지 않으므로 팬텀 로우 현상 발생 가능
 
 ```mysql
-CREATE TABLE t (a INT NOT NULL, b INT) ENGINE = InnoDB;
-INSERT INTO t VALUES (1,2),(2,3),(3,2),(4,3),(5,2);
-COMMIT;
+mysql> select * from tml;
++-----+------+------+
+| seq | val1 | val2 |
++-----+------+------+
+|   1 |    1 |    2 |
+|   2 |    1 |    2 |
+|   3 |    3 |    2 |
+|   7 |    3 |    4 |
+|  11 |    3 |    3 |
+|  14 |    5 |    6 |
+|  15 |    6 |    7 |
+|  16 |    7 |    8 |
+|  17 |    8 |   10 |
+|  18 |    9 |    8 |
+|  19 |   10 |   10 |
+|  23 |   12 |   12 |
++-----+------+------+
+12 rows in set (0.01 sec)
 
-# TransactionA
-BEGIN;
-UPDATE t SET b = 5 WHERE b = 3;
+# tx1
+mysql> update tml set val2=20 where val2=2;
+Query OK, 3 rows affected (0.01 sec)
 ``````
-- `UPDATE`나 `DELETE` 수행 시에 `WHERE` 조건에 해당하는 레코드만 잠근다
+- `READ COMMITTED` 격리 수준에서는 `update`나 `delete` 수행 시에 `where` 조건에 해당하는 레코드만 잠근다
+  - `update` 조건에 해당하는 레코드를 찾기 위해 테이블 풀 스캔을 시도
+  - `update` 조건에 해당하는 레코드는 총 3건
 
 ```mysql
-x-lock(1,2); unlock(1,2)
-x-lock(2,3); update(2,3) to (2,5); retain x-lock
-x-lock(3,2); unlock(3,2)
-x-lock(4,3); update(4,3) to (4,5); retain x-lock
-x-lock(5,2); unlock(5,2)
+-------+------------------------+
+| PRIMARY    |       281473231931392 | RECORD    | X,REC_NOT_GAP | GRANTED     | 1                      |
+| PRIMARY    |       281473231931392 | RECORD    | X,REC_NOT_GAP | GRANTED     | 2                      |
+| PRIMARY    |       281473231931392 | RECORD    | X,REC_NOT_GAP | GRANTED     | 3                      |
++--------+----
 ```
-- 레코드를 탐색하는 과정에서 일단 레코드를 잠그지만, `WHERE` 조건에 해당하지 않음이 판별되면 락을 바로 해제하였다
+- 레코드를 탐색하는 과정에서 일단 레코드를 잠그지만 `where` 조건에 해당하지 않음이 판별되면 락을 바로 해제하였다
+  - `val2=20` 을 만족하는 세 건의 인덱스 레코드만 넥스트 키 락으로 잠금
   - 조건에 해당하지 않더라도 탐색한 인덱스 레코드는 모두 잠그는 `REPEATABLE READ` 와는 다른 방식으로 동작
 
 ```mysql
-# Transaction B
-UPDATE t SET b = 4 WHERE b = 2;
-
-x-lock(1,2); update(1,2) to (1,4); retain x-lock
-x-lock(2,3); unlock(2,3)
-x-lock(3,2); update(3,2) to (3,4); retain x-lock
-x-lock(4,3); unlock(4,3)
-x-lock(5,2); update(5,2) to (5,4); retain x-lock
+# tx2
+mysql> update tml set val2=40 where val2=40;
+Query OK, 0 rows affected (0.01 sec)
+Rows matched: 0  Changed: 0  Warnings: 0
 ```
-- `UPDATE` 수행 시에 대상 레코드가 이미 잠겨있다면 가장 최신에 커밋된 데이터를 읽어와 `WHERE` 조건을 만족하는지 검사한다 (semi-consistent)
-  - 조건을 만족하지 않는 레코드라면 기다리지 않고 지나감
-  - 조건을 만족하면 락이 해제될 때까지 대기
+- `update` 수행 시에 대상 레코드가 이미 잠겨있다면 가장 최신에 커밋된 데이터를 읽어와 `where` 조건을 만족하는지 검사한다 (semi-consistent)
+  - `tx1` 에서의 업데이트 쿼리에 의해 일부 레코드가 잠겨있음에도 기다리지 않고 `update` 쿼리 수행
+  - 잠겨 있는 레코드의 가장 최신 커밋 데이터를 읽어왔을 때 `val2=40` 조건을 만족하지 않았기 때문에 기다리지 않고 지나감
+
+```mysql
+# tx2
+mysql> update tml set val2=40 where val2=2;
+ERROR 1205 (HY000): Lock wait timeout exceeded; try restarting transaction
+
+| PRIMARY    |       281473231937944 | RECORD    | X,REC_NOT_GAP | WAITING     | 1
+```
+- 만약 가장 최신 커밋 데이터를 읽어왔을 때 `where` 조건을 만족한다면 락이 해제될 때까지 기다린다
 
 **READ UNCOMMITTED**
-- `SELECT`를 사용한 잠금 없는 읽기 수행 시에 대기 없이 바로 읽어오며, 커밋 여부와 관계없이 가장 최신 버전을 가져온다
-- 일관되지 않은 읽기가 수행되며 `dirty read` 현상이 발생할 수 있다
+
+`select`를 사용한 잠금 없는 읽기 수행 시에 대기 없이 바로 읽어오며, 커밋 여부와 관계없이 가장 최신 버전을 가져온다
+
+```mysql
+# tx2
+mysql> select * from tml;
++-----+------+------+
+| seq | val1 | val2 |
++-----+------+------+
+|  11 |    3 |    3 |
+|  14 |    5 |    6 |
+|  19 |   10 |   10 |
+|  23 |   12 |   12 |
++-----+------+------+
+
+# tx1
+mysql> update tml set val2=20 where val1=5;
+Query OK, 1 row affected (0.02 sec)
+    
+
+```
+- `tx2`에서 처음 `select`를 수행했을 때 `val1=5`인 레코드의 `val2` 값은 6이었다
+- 이후 `tx1`에서 `val1=5` 레코드의 `val2` 값을 20으로 갱신하였다
+
+```mysql
+# tx2 
+mysql> select * from tml;
++-----+------+------+
+| seq | val1 | val2 |
++-----+------+------+
+|  11 |    3 |    3 |
+|  14 |    5 |   20 |
+|  19 |   10 |   10 |
+|  23 |   12 |   12 |
++-----+------+------+
+```
+- 이후 `tx2`에서 `select`를 수행하면 `val2` 값이 20으로 변경되었다
+  - 다른 트랜잭션에서 아직 커밋하지 않은 데이터도 읽어올 수 있음
+
+```mysql
+| idx1       |       281473231931392 | RECORD    | X,REC_NOT_GAP | GRANTED     | 5, 14                  |
+| PRIMARY    |       281473231931736 | RECORD    | X,REC_NOT_GAP | GRANTED     | 14
+```
+- 레코드에 락이 걸려 있음에도 `select`는 락의 영향을 받지 않고 최신 데이터를 읽어오는 이상한 짓을 하고 있다
+  - `READ UNCOMMITTED`에서 잠금 없는 읽기를 수행하면 락에 의한 대기 없이 항상 최신 데이터를 읽어옴
+
+```mysql
+# tx1
+mysql> rollback;
+
+# tx2
+mysql> select * from tml;
++-----+------+------+
+| seq | val1 | val2 |
++-----+------+------+
+|  11 |    3 |    3 |
+|  14 |    5 |    6 |
+|  19 |   10 |   10 |
+|  23 |   12 |   12 |
++-----+------+------+
+```
+- 이후 `tx1`에서 트랜잭션을 롤백하면 수정 사항이 이전으로 복구된다
+- `tx2`에서 테이블 데이터를 조회하면 이전에 읽어왔던 데이터가 변경되어 `val2=6`이 되었다
+- `READ UNCOMMITTED`는 커밋되지 않은 데이터를 읽어오기 때문에 `dirty read` 현상이 발생할 수 있다
 
 **SERIALIZABLE**
-- 잠금 없는 `SELECT`를 수행하더라도 `InnoDB`에서 `SELECT FOR SHARE`로 변환하여 실행한다
+
+잠금 없는 `SELECT`를 수행하더라도 `InnoDB`에서 `SELECT FOR SHARE`로 변환하여 실행한다
+
+```mysql
+mysql> select * from tml where seq < 3;
++-----+------+------+
+| seq | val1 | val2 |
++-----+------+------+
+|   1 |    1 |    2 |
+|   2 |    1 |    2 |
++-----+------+------+
+```
+- 트랜잭션을 시작하고 `seq` 값이 3미만인 데이터를 잠금 없는 읽기로 읽어왔다
+  - `seq`는 테이블의 프라이머리 키
+
+```mysql
+| PRIMARY    |       281473231931392 | RECORD    | S         | GRANTED     | 1                      |
+| PRIMARY    |       281473231931392 | RECORD    | S         | GRANTED     | 2                      |
+| PRIMARY    |       281473231931736 | RECORD    | S,GAP     | GRANTED     | 3
+```
+- 스캔 범위에 해당하는 클러스터드 인덱스에 공유 넥스트 키 락과 갭 락이 걸렸다
+  - 해당 트랜잭션에서 데이터를 읽는 동안 다른 트랜잭션에서 업데이트 및 제거 불가
+  - 해당 트랜잭션에서 데이터를 읽는 동안 다른 트랜잭션에서 갭에 데이터 삽입 불가 (seq < 3)
+  - 해당 트랜잭션에서 데이터를 읽는 동안 다른 트랜잭션에서 바로 읽기 가능 (읽기 공유 락)
 
 ### 2) 잠금 없는 일관된 읽기
 InnoDB 는 데이터를 요청하는 쿼리에 특정 시점의 DB 스냅샷 데이터를 제공한다
@@ -180,6 +300,7 @@ InnoDB 는 데이터를 요청하는 쿼리에 특정 시점의 DB 스냅샷 데
 
 `REPEATABLE READ` 트랜잭션 격리수준에서는 첫 번째 읽기에서 만들어진 스냅샷을 항상 동일하게 읽어온다
 - 새로운 스냅샷을 확인하고 싶다면 트랜잭션을 커밋하고 다시 쿼리를 날려야 한다
+- 혹은 `SELECT FOR UPDATE` 같은 잠금 읽기를 수행하면 최신 커밋 데이터 확인 가능
 
 잠금 없는 읽관된 읽기는 `SELECT` 쿼리가 접근하는 데이터 락을 걸지 않기 때문에 데이터를 읽는 동시에 데이터 수정이 가능하다
 - 메모리 언두 로그에 있는 데이터에는 락이 걸리지 않기 때문에 대기 없이 데이터를 읽어올 수 있다
