[1002] JVM 클래스 로더 fix

--- a/2023Q4/2023_10/1002.md
+++ b/2023Q4/2023_10/1002.md
@@ -8,7 +8,7 @@ JVM 이 어떤 과정으로 클래스 정보를 불러오는지 알아보자
 
 ### 클래스 로딩
 자바 컴파일러에 의해 컴파일된 자바 클래스 파일 (`.class`) 은 클래스 로더 (Class Loader) 에 의해 메모리에 탑재된다.
-- 클래스 로더는 클래스 로딩을 수행하는 객체이다 
+- 클래스 로더는 클래스 로딩을 수행하는 객체이다
 
 클래스 로더는 바이트 클래스 파일을 메모리에 로딩하는 것 외에도 링킹 (Linking) 과 초기화를 수행한다.
 - 링킹은 클래스 파일을 사용하기 전에 검증하는 행위이다
@@ -60,7 +60,6 @@ JVM 이 어떤 과정으로 클래스 정보를 불러오는지 알아보자
 jdk.internal.loader.ClassLoaders$AppClassLoader@531d72ca
 ```
 - 클래스 로더는 `.class` 파일로부터 `Class` 객체를 생성한다
-- 생성된 `Class` 객체는 JVM 이 내려갈 때까지 메모리에 존재한다
 - 모든 `Class` 객체는 자신을 생성한 클래스 로더에 대한 참조를 갖고있다
 
 ### 링킹 (Linking)
@@ -234,19 +233,14 @@ java.lang.Object@44a3ec6b
 - 따라서 객체 참조 값에 접근할 경우 클래스 로더에 의해 로딩된다고 한다
 
 ```java
-class learn.java.testrepository.plain.loader.OuterClass$Inner extends learn.java.testrepository.plain.loader.OuterClass$Parent {
-  // 문자열 참조값
-  public static java.lang.String TEST02;
-  public static final java.lang.String TEST03;
-  
-  // final 참조 값
-  public static final java.lang.Object obj;
-  learn.java.testrepository.plain.loader.OuterClass$Inner();
-  public static java.lang.String info();
-  static {};
+public static void main(String[] args) {
+        System.out.println("OuterClass.main");
+        // OuterClass.Inner.TEST03
+        System.out.println("I'm TEST03");
+        System.out.println(OuterClass.Inner.obj);
 }
 ```
-- `Inner.class` 파일을 디컴파일해보니 실제로 `String` 타입의 상수 값은 컴파일 타임에 값이 결정되어 있었다 (`TEST02`, `TEST03`)
+- `Inner.class` 파일을 디컴파일해보니 실제로 `String` 타입의 상수 값은 컴파일 타임에 값이 결정되어 있었다 (`I'm TEST03`)
 - 반면에 같은 상수값이어도 객체를 참조하는 `obj` 필드는 컴파일 타임에 값이 결정되어 있지 않았다
 
 ### 참고
