[1016] 도커(4) - 가상 브릿지 update

--- a/2023Q4/2023_10/1016.md
+++ b/2023Q4/2023_10/1016.md
@@ -63,11 +63,11 @@ $ ip link set dev brid4 up
 - 디폴트 네임스페이스에 있는 가상 인터페이스 `brid4`를 가상 브릿지 `br0`에 연결한다
 - 가상 인터페이스 `brid4`를 활성화한다
 
-<img width="500" src="https://d2uleea4buiacg.cloudfront.net/files/688/6889b96e9c070ca19033cad33c3b2768b652f71fdf6c79a6c392d7d5be783359.m.png">
+<img width="500" src="https://github.com/rimrim990/TIL/assets/62409503/4de7670e-6355-4cdd-bfe1-89516295a255">
 
 - 여기까지 진행하면 위와 같은 그림과 동일한 상태가 된다
 
-<img width="500" src="https://d2uleea4buiacg.cloudfront.net/files/1b1/1b1150a9a5fef61642fbf9072b91f7e738c42b18524f71938a28d815e52fcd10.m.png">
+<img width="500" src="https://github.com/rimrim990/TIL/assets/62409503/15730ca9-3a07-4637-a541-7157d3d1e68d">
 
 - 이후 `container4`에 진행했던 작업을 다시 수행하여 새로운 네트워크 네임스페이스 `container5`를 생성한다
 - 이제 디폴트 네트워크 네임스페이스와 `container4`, `container5`가 브릿지를 통해 서로 연결되었다
@@ -209,7 +209,7 @@ PING 8.8.8.8 (8.8.8.8) 56(84) bytes of data.
 ```
 - 앞서 설정을 모두 끝마치고 다시 외부로 `ping`을 보내면 정상적으로 응답을 받을 수 있다
 
-<img width="500" src="https://d2uleea4buiacg.cloudfront.net/files/5bd/5bd4f99ed3c5ab3bab1690bbf828b054bb60aaa0273b93b4a637ab8400163327.m.png">
+<img width="500" src="https://github.com/rimrim990/TIL/assets/62409503/a48c7395-df5e-4bd9-8010-09ac83aea65d">
 
 - 지금까지 수행한 내용을 이미지로 요약하면 위의 상태와 같다
 
